Timeline Present button top alignment fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ body
 {
     width: 100px;
     position: absolute;
-    top: -30px;
+    /* top: -30px; */
     left: 50%;
     margin-left:-50px;
     z-index: 2;
